003-setup-eks-cluster/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test-ns
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
